--- a/style.css
+++ b/style.css
@@ -4,8 +4,157 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500;600&display=swap');
 /* Quicksand */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.navbar-style{
+    background-color: #FCFCF9;
+    width: 100vw;
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+.my-name h1{
+  font-family: 'Lobster', cursive;
+  line-height: 1.5rem;
+}
+
+.cv-text{
+  font-family: 'Lobster', cursive;
+  line-height: 1.5rem;
+}
+
+.forename {
+  padding-bottom:0px;
+  margin-bottom: 0px;
+}
+.surname {
+  padding-top: 0px;
+  margin-top: 6px;
+  padding-left: 2rem;
+}
+
+.cv-icon{
+  height: 2rem;
+}
+
+.me-img{
+  height: 185px;
+  width: 185px;
+  display: block;
+  margin: auto;
+  position: relative;
+  margin-top: 70px;
+}
+
+.bio-text{
+  width: 50%;
+  text-align: center;
+  margin: 30px auto;
+}
+.section-heading{
+  font-family: 'Lobster', cursive;
+  margin-top: 50px;
+}
+.project-container{
+  position: relative;
+  margin-bottom: 100px;
+}
+.project-screenshot{
+  width: 600px;
+  height: 360px;
+  height: 360px;
+  margin: 50px 0px 0px 100px;
+  box-shadow: 5px 5px 5px #ccc;
+  position: relative;
+  z-index: 1;
+}
+.project-details{
+  width: 600px;
+  height: 370px;
+  background-color: rgba(103, 97, 97, 0.9);
+  color: white;
+  display: flex;
+  margin-left: auto;
+  margin-bottom: 50px;
+  box-shadow: 5px 5px 5px #ccc;
+  z-index: 2;
+  position: absolute;
+  top: 35%;
+  left: 47%;
+}
+
+.project-text{
+  padding: 28px 20px;
+
+}
+.project-text p {
+  padding: 15px 0px 5px 0px;
+  width: 450px;
+}
+.project-text h5 {
+  padding-bottom: 10px;
+}
+
+.project-links{
+  background-color: rgba(80, 77, 77, 100);
+  height: 100%;
+  width: 20%;
+  display: flex;
+}
+
+.project-icons{
+  list-style: none;
+  /* width: 50%; */
+  padding: 0px;
+  margin: auto auto 0px auto;
+  padding-bottom: 25px;
+}
+
+.project-icons > li{
+  width: fit-content;
+  margin: auto;
+}
+.project-icons > li > a {
+  font-size: 2em;
+  color: white;
+}
+
+footer{
+  background-color: #FCFCF9;
+  position: absolute;
+  width: 100vw;
+  height: 200px;
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.footer-content{
+  display: flex;
+  align-items: center;
+}
+.footer-content > a{
+  color: black;
+  text-decoration: none;
+}
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.list-inline > li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.list-inline > li > a {
+  font-size: 2em;
+  color: black;
+
+}
 
 
+/*
 body {
   background-color: #F5E9E2;
   font-family: 'Quicksand', sans-serif;
@@ -15,6 +164,8 @@ body {
   line-height: 1em;
   letter-spacing: 0.1em;
 }
+
+
 
 h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
@@ -44,14 +195,9 @@ a {
   text-decoration: none;
   font-size: 1.3em;
 }
+ */
 
-
-
-.container {
-  margin: 0 auto;
-  /* width: 100vw; */
-}
-
+/*
 .card{
   max-width: 70vw;
   margin: auto;
@@ -75,19 +221,7 @@ a {
   border-radius: 50%;
 }
 
-.list-inline {
-  list-style: none;
-  padding-left: 0px;
-}
 
-.list-inline > li {
-  display: inline-block;
-  padding: 0px 20px;
-}
-
-.list-inline > li > a {
-  font-size: 2em;
-}
 
 .main-button {
   font-family: 'Raleway', sans-serif;
@@ -110,21 +244,21 @@ a {
 
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
-  .container {
+  /* .container {
     width: 700px;
   }
-}
+} */
 
-@media (max-width: 720px) {
+/* @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
-  .container {
+  /* .container {
     width: 500px;
   }
-}
+} */
 
-@media (max-width: 470px) {
+/* @media (max-width: 470px) { */
   /* For a screen < 540px, this CSS will be read */
-  .container {
+  /* .container {
     width: 300px;
   }
-}
+} */
