--- a/style.css
+++ b/style.css
@@ -6,6 +6,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
+.redirect-alert {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 77;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(128, 128, 128, 0.7);
+}
+.alert-text-container {
+  background-color: white;
+  width: 60%;
+  height: 60%;
+  margin: auto;
+  border: 1px solid black;
+  padding: 70px;
+  margin-top: 100px;
+  text-align: center;
+  border-radius: 3px;
+}
+.alert-btn {
+  padding: 30px 50px;
+  width: 100%;
+  background-color: blueviolet;
+  border-radius: 6px;
+}
+
+.alert-btn > a {
+  color: white;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
 .navbar-style {
   background-color: #fcfcf9;
   width: 100vw;
